--- a/dsociopay/style.css
+++ b/dsociopay/style.css
@@ -27,19 +27,18 @@ body{
 .navbar{
     /* background-color: rgba(0, 0, 0, 0.281); */
     /* height: 20vh; */
+    border: 1px solid white;
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-
 }
 .links{
     color: white;
     display: flex;
     justify-content: center;
-    height: 10vh;
     list-style: none;
-   
 }
 a{
   color: white;
@@ -63,6 +62,7 @@ a{
     margin-right: 60%;
 }  
 .main{
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content:space-between;
@@ -73,6 +73,8 @@ a{
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    padding-top: 50px;
+    padding-bottom: 100px;
 }
 .trust{
     display: flex;
@@ -90,7 +92,6 @@ a{
 .shapy-image{
     display: flex;
     justify-content: center;
-    flex-direction: column;
     align-items: center;
     position: relative;
 }
@@ -160,34 +161,39 @@ a{
     border-radius: 500px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.466);
 }
-#square4{
-    display:inline-block;
-    background-color:#1e1b4bc4;
-    text-align: center;
-    width:18%;
-    height: 50vh;
-    margin: 10px;
-    padding: 15px;
-    border-radius: 500px;
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.466);
-}
+
 .stand{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
+    padding: 5px 15px;
 }
 .seat{
+    width: 80%;
+    background: #9333EA;
+    height: 60vh;
+    border-radius: 10px;
+    margin: auto;
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
-    flex-direction: column;
 }
-.seat p{
+.boxtext{
+
+    width: 45%;
+    height: 90%;
     position: absolute;
-    left: 200px;
-    top: 120px;
+    bottom: 15px;
+    right: 3px;
+    gap:  20px;
+    padding: 0px 10px;
+}
+.box_btn{
+    width: 100%;
+    padding-top: 20px;
 }
 .bigrec{
     width: 100%;
@@ -451,4 +457,195 @@ ul{
       font-size: 1rem;
     }
   }
-  
+
+  /* Home Screen Mobile Screen */
+@media (max-width: 480px){
+    .main{
+        border: 1px solid white;
+
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content:space-between;
+        align-items: center;
+        padding: 0px 5px;
+    }
+    .main_btn{
+        border: 1px solid white;
+
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .main1{
+        border: 1px solid white; 
+
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .navbar{
+        /* background-color: rgba(0, 0, 0, 0.281); */
+        /* height: 20vh; */
+        border: 1px solid white;
+            
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        display: none;
+    }
+    .phone_cloud{
+        width: 90%;
+        padding: 5px 10px;
+    }
+    .stand{
+        display: flex;
+        flex-direction: column;
+    }
+    .seat{
+        width: 100%;
+        background: #9333EA;
+        padding: 20px 10px;
+        border-radius: 10px;
+        margin: auto;
+        display: flex;
+        position: relative;
+        flex-direction: column;
+    }
+    .boxtext{
+        width: 90%;
+        position: absolute;
+        bottom: 15px;
+        right: 3px;
+        gap:  20px;
+        padding: 0px 10px;
+    }
+    .box_btn{
+        width: 100%;
+        padding-top: 20px;
+    }
+    .atm_card{
+        display: none;
+    }
+    .shapy-image{
+        position: relative;
+    
+        border: 1px solid white;
+    }
+    .square-cylinder{
+        display: flex;
+        justify-content: space-around;
+        margin-top: 5%;
+        width: 100%;
+        height: 50vh;
+        background-color:transparent;
+        position: absolute;
+    }
+    #square1, #square2, #square3, #square4{
+            display:inline-block;
+            background-color:#1e1b4bc4;
+            text-align: center;
+            width:100%;
+            height: 50vh;
+            margin: 10px;
+            padding: 15px;
+            border-radius: 500px;
+            box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.466);
+    }
+
+}
+
+@media (min-width: 375px ) and (max-width: 667px){
+    .seat{
+        width: 100%;
+        height: 90vh;
+        background: #9333EA;
+        padding: 20px 10px;
+        border-radius: 10px;
+        margin: auto;
+        display: flex;
+        position: relative;
+        flex-direction: column;
+    }
+}
+@media (min-width: 414px ) and (max-width: 896px){
+    .seat{
+        width: 100%;
+        height: 30vh;
+        background: #9333EA;
+        padding: 20px 10px;
+        border-radius: 10px;
+        margin: auto;
+        display: flex;
+        position: relative;
+        flex-direction: column;
+    } 
+}
+@media (min-width: 390px ) and (max-width: 844px){
+    .seat{
+        width: 100%;
+        height: 70vh;
+        background: #9333EA;
+        padding: 20px 10px;
+        border-radius: 10px;
+        margin: auto;
+        display: flex;
+        position: relative;
+        flex-direction: column;
+    } 
+}
+@media (min-width: 430px ) and (max-width: 932px){
+    .seat{
+        width: 100%;
+        background: #9333EA;
+        padding: 20px 10px;
+        border-radius: 10px;
+        margin: auto;
+        display: flex;
+        position: relative;
+        flex-direction: column;
+    } 
+}
+@media (min-width: 390px ) and (max-width: 844px){
+    .seat{
+        width: 100%;
+        height: 70vh;
+        background: #9333EA;
+        padding: 20px 10px;
+        border-radius: 10px;
+        margin: auto;
+        display: flex;
+        position: relative;
+        flex-direction: column;
+    } 
+}
+@media (min-width: 360px ) and (max-width: 740px){
+    .seat{
+        width: 100%;
+        height: 85vh;
+        background: #9333EA;
+        padding: 20px 10px;
+        border-radius: 10px;
+        margin: auto;
+        display: flex;
+        position: relative;
+        flex-direction: column;
+    } 
+}
+@media (min-width: 412px ) and (max-width: 915px){
+    .seat{
+        width: 100%;
+        height: 85vh;
+        background: #9333EA;
+        padding: 20px 10px;
+        border-radius: 10px;
+        margin: auto;
+        display: flex;
+        position: relative;
+        flex-direction: column;
+    } 
+}
